--- a/_examples/RL_parallelBuffer.ipynb
+++ b/_examples/RL_parallelBuffer.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "9294e6be",
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "c563da59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,6 +89,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b990ab84",
    "metadata": {},
    "source": [
     "# DDR env"
@@ -94,6 +97,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "94d548d5",
    "metadata": {},
    "source": [
     "## Angle error function"
@@ -102,6 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "3da3012a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,6 +135,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9da3ebe6",
    "metadata": {},
    "source": [
     "## Define the env"
@@ -138,6 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "82433735",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,6 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "2bfba770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,6 +300,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "81c89ca9",
    "metadata": {
     "tags": []
    },
@@ -302,6 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
+   "id": "b9e1e319",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,6 +320,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a1f709e",
    "metadata": {},
    "source": [
     "## Prepare agent and env instances"
@@ -318,6 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "6a3189f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,6 +353,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "d0cf5261",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,6 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "c0ee4224",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,6 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "1614f131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,6 +432,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "12841f08",
    "metadata": {},
    "source": [
     "## Train"
@@ -425,6 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "7670bca5",
    "metadata": {},
    "outputs": [
     {
@@ -489,6 +506,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "7b541455",
    "metadata": {},
    "outputs": [
     {
@@ -521,6 +539,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b1a9a7a",
    "metadata": {
     "tags": []
    },
@@ -531,6 +550,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "cea79155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,6 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "a549f942",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,6 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "17ec13f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,6 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
+   "id": "5df27f83",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,6 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
+   "id": "b70b6145",
    "metadata": {},
    "outputs": [
     {
@@ -670,6 +694,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "05af0a90",
    "metadata": {},
    "source": [
     "# Custom buffer"
@@ -677,6 +702,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3f4f9bc4",
    "metadata": {},
    "source": [
     "Idea - fix no. time steps that we want to shove into the buffer at every synchronisation step. Run the computations in parallel and collect data in a sub-buffer on the head process the way it has been done now. Once there are enough data points in the sub-buffer, merge it with the main buffer and call the update step."
@@ -684,6 +710,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "951444b4",
    "metadata": {},
    "source": [
     "## Data collection and buffer"
@@ -692,6 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
+   "id": "7735e923",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,6 +801,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "33ea3196",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,6 +864,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ead232d",
    "metadata": {},
    "source": [
     "## Custom training loop"
@@ -843,6 +873,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "66d575bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,6 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "e34e4c5f",
    "metadata": {},
    "outputs": [
     {
@@ -909,6 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "4ccb45d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -926,6 +959,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "4e61bcde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -982,6 +1016,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "e17c2b6d",
    "metadata": {},
    "outputs": [
     {
@@ -1003,6 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
+   "id": "ccc35556",
    "metadata": {},
    "outputs": [
     {
@@ -1054,6 +1090,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
+   "id": "30346a87",
    "metadata": {},
    "outputs": [
     {
@@ -1081,6 +1118,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "306b6361",
    "metadata": {},
    "source": [
     "## Evaluate"
@@ -1089,6 +1127,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
+   "id": "6cea6c81",
    "metadata": {},
    "outputs": [
     {
@@ -1152,7 +1191,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1166,7 +1205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
